--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                <hr>
             <p>
                 <img  src="images/stevenpic.jpg" alt="Steven Sub picture">
-            <h3>Welcome! Thanks for visiting</h3>
+            <h3>Welcome! Thanks for visiting my website</h3>
             <p>Everyone has their own unique story. Here is mine.
             I am currently a student at the Unversity of Belize(UB) pursuing an Associate Degree in Information Technology.
             The course that I found really interesting at UB was Web Development and Programming. These two course are my favorite. 
