--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Xulab, Belize">
+    <meta name="keywords" content="Steven Sub, Steven, Sub, Css, Belize, Javascript, jQuery">
     <link rel="stylesheet" href="css/style.css">
     <script src="JavaScript/code.js" type="text/JavaScript"></script>
     <link  rel="stylesheet"href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
