--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         </header>
            <main class="mainContent">
            
-            <form id="contact" name="contact" method="post" data-netlify="true">
+            <form id="contact" name="contact" method="post" netlify >
               
                 <h4>Contact me to get more information!</h4>
                 <fieldset>
