--- a/education.html
+++ b/education.html
@@ -41,7 +41,7 @@
             <dd>August 2013-June 2017<br> <a href="https://www.ihs.edu.bz/" target="_blank" title="Learn about Independence High school">Independence High School</a>, 
               Independence Village, Stann Creek District</dd>
               <dt>Primary Education</dt>
-            <dd>August 2005- June2013<br> Red Bank Christian School, Reb Bank Village, Stann Creek District</dd>
+            <!--<dd>August 2005- June2013<br> Red Bank Christian School, Reb Bank Village, Stann Creek District</dd>-->
             
             </dl> 
                
