--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
             <footer>
                 <p>&copy 2020 Steven J Sub All Rights Reserved</p>
                 <ul>
-                    <li><a href="https://www.facebook.com/Steven.Sub" target="_blank"><i class="fa fa-facebook"></i><a></a></li>
-                <li><a href="https://www.instagram.com/xulab05/" target="_blank"><i class="fa fa-instagram"></i></a></li> 
+                    <li><a href="https://www.facebook.com/Steven.Sub" target="_blank" title="View steven Facebook profile"><i class="fa fa-facebook"></i><a></a></li>
+                <li><a href="https://www.instagram.com/xulab05/" target="_blank" title="View steven Instagram profile"><i class="fa fa-instagram"></i></a></li>
+                    <li>
+                        <a href="https://github.com/Xulab5" target="_blank" title="View Steven Github profile"><i class="fa fa-github"></i>
+                        </a>
+                    </li>
             </ul>       
             </footer>   
         </div>      
