--- a/education.html
+++ b/education.html
@@ -24,11 +24,11 @@
                 </div>
             <nav>
                 <ul id="navbar">
-                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html" title="Learn more about Steven">About</a></li>
                     <!--<li><a href="service.html">Service</a></li>-->
-                    <li><a href="education.html">Education</a></li>
+                    <li><a href="education.html" title="Take a look at Steven's Education">Education</a></li>
                     <!--<li> <a href="skills.html">Skills</a></li>--> 
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" title="Send a message">Contact</a></li>
                 </ul>
                 
             </nav>
@@ -50,8 +50,12 @@
             <footer>
                 <p>&copy 2020 Steven J Sub All Rights Reserved</p>
                 <ul>
-                 <li><a href="https://www.facebook.com/Steven.Sub" target="_blank"><i class="fa fa-facebook"></i><a></a></li>
-                <li><a href="https://www.instagram.com/xulab05/" target="_blank"><i class="fa fa-instagram"></i></a></li> 
+                 <li><a href="https://www.facebook.com/Steven.Sub" target="_blank" title="View steven Facebook profile"><i class="fa fa-facebook"></i><a></a></li>
+                <li><a href="https://www.instagram.com/xulab05/" target="_blank" title="View steven Instagram profile"><i class="fa fa-instagram"></i></a></li>
+                    <li>
+                        <a href="https://github.com/Xulab5" target="_blank" title="View Steven Github profile"><i class="fa fa-github"></i>
+                        </a>
+                    </li> 
             </ul>       
             </footer>   
         </div>      
