--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 </div>
             <nav>
                 <ul id="navbar">
-                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html" title="Learn more about Steven">About</a></li>
                     <!--<li><a href="service.html">Service</a></li>-->
-                    <li><a href="education.html">Education</a></li>
+                    <li><a href="education.html" title="Take a look at Steven's Education">Education</a></li>
                     <!--<li> <a href="skills.html">Skills</a></li>--> 
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" title="Send a message">Contact</a></li>
                 </ul>
                 
             </nav>
